# CGALPlugin

./: AUTHORS.md  CGALPlugin.md  CGALPluginConfig.cmake.in  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
CGALPlugin_test/: CMakeLists.txt  MeshGenerationFromImage_test.cpp  Refine2DMesh_test.cpp
scenes/: MeshGenerationFromImage.scn  MeshGenerationFromImageWithFeatures.scn  Refine2DMesh.scn
src/CGALPlugin/: BooleanOperations.cpp  CylinderMesh.h  CylinderMesh.inl  DecimateMesh.h  DecimateMesh.inl  FrontSurfaceReconstruction.cpp  MeshGenerationFromImage.h  MeshGenerationFromImage.inl  MeshGenerationFromPolyhedron.h  MeshGenerationFromPolyhedron.inl  PoissonSurfaceReconstruction.cpp  Refine2DMesh.cpp  Refine2DMesh.h  Refine2DMesh.inl  TriangularConvexHull3D.h  UpsamplePointCloud.cpp  initCGALPlugin.cpp
